--- a/index.html
+++ b/index.html
@@ -24,13 +24,20 @@
         <br> <br> <br> <br>
       
 
-        <textarea class="res" placeholder="Resultado"></textarea>
+        <textarea class="res" placeholder="Resultado"></textarea> 
+
+
+
+        <h3>digite se nome</h3>
+        <input class="input3" type="text"> <button class="button2">enviar</button>
+        <h1 class="isaac"></h1>
 
     </div>
 
       
   
 
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="script2.js"></script>
 </body>
 </html>
